--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,5 +1,10 @@
-<h1>Edit Reservation(s)</h1>
+<p hidden id='edit-resevation-<%= reservation.id %>' class='pageName'>Edit Reservation <%= reservation.id %></p>
 
-<%= render 'form', reservation: reservation %>
+<h1>Edit Reservation</h1>
+<%= form_for( reservation, local: true,  # PATH MUST BE SINGULAR!!!
+              url: tenant_space_reservation_path(tenant, space, reservation),
+              id: "edit-reservation-form", class: "reservation" ) do |form|  %>
 
-<%= link_to 'Back', spaces_path %>
+  <%= render 'form', form: form, reservation: reservation, event: event, space: space, tenant: tenant %>
+
+<% end %>
