--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -3,10 +3,10 @@
 <h1>New Reservation</h1>
 
 <%= form_for( reservation, local: true,
-              url: tenant_space_reservations_path(tenant, space) # (tenant_id: tenant.id, space_id: space.id, id: reservation.id),
+              url: tenant_space_reservations_path(tenant_id: tenant.id, space_id: space.id, id: reservation.id),
               id: "new-reservation-form", class: "reservation" ) do |form|  %>
 
-  <%= render 'form', form: form, reservation: reservation, event: event, space: space, tenant: tenant %>
+  <%= render 'form', form: form, reservation: reservation, space: space, tenant: tenant %>
 
 <% end %>
 
