update spec page detection

--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,4 +1,4 @@
-<p hidden id='tenant_spaces_show_<%= tenant.id %>' class='pageName'>tenant_spaces_show_<%= tenant.id %></p>
+<p hidden id='tenant_<%= tenant.id %>_spaces_index' class='pageName'>Tenant-<%= tenant.id %> Spaces Index</p>
 
 <div class="container">
 
