--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,5 @@
+<p hidden id='edit-event-<%= event.id %>' class='pageName'>Edit Event <%= event.id %></p>
+
 <h1>Editing Event</h1>
 
 <%= render 'form', event: @event %>
