--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p hidden id='show-event-<%= event.id %>' class='pageName'>Show Event <%= event.id %></p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
