--- a/app/views/spaces/edit.html.erb
+++ b/app/views/spaces/edit.html.erb
@@ -1,3 +1,5 @@
+<p hidden id='edit-space-<%= space.id %>' class='pageName'>Edit Space <%= space.id %></p>
+
 <h1>Editing Space</h1>
 
 <%= render 'form', space: @space %>
