--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,3 +1,5 @@
+<p hidden id='show-space-<%= space.id %>' class='pageName'>Show Space <%= space.id %></p>
+
 <h1 class="title"><small>Space:</small> <%= space.space_name %></h1>
 
 <%= render 'spaces/calendar_maxi', space: space %>
