--- a/app/views/tenants/_tenant_card.html.erb
+++ b/app/views/tenants/_tenant_card.html.erb
@@ -4,7 +4,7 @@
     <div class="media">
       <div class="media-left">
         <figure class="image is-48x48">
-          <img src="<%= tenant.tenant_logo_url %>" alt="Placeholder image">
+          <img src="<%= tenant.tenant_logo_url %>" alt="<%= tenant.tenant_name %> logo">
         </figure>
       </div>
       <div class="media-content">
