Is cancelled - is now displayed

--- a/app/views/spaces/_calendar_mini.html.erb
+++ b/app/views/spaces/_calendar_mini.html.erb
@@ -81,14 +81,11 @@
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
-      <p class="modal-card-title">Reservation(s)</p>
+      <p class="modal-card-title has-text-centered">Reservation(s)</p>
       <button class="delete" aria-label="close"></button>
     </header>
-    <section id="reservation-details-body" class="modal-card-body">
-      List Reservations
-    </section>
-    <footer class="modal-card-foot">
-      <button class="button">Dismiss</button>
-    </footer>
+      <div id="reservation-details-body">
+        Reservations
+      </div>
   </div>
 </div>
