--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -70,7 +70,7 @@
 
     <div class="navbar-end">
 
-      <% if Tenant.all.count != 1 %>
+      <% if @demo_present && (@tenant_count > 0) %>
       <div class="navbar-item">
         <div class="buttons">
           <%= link_to "All Schedules", tenants_path, class: 'button is-light'  %>
@@ -84,7 +84,9 @@
           <%= link_to "#{current_user.email}", edit_user_registration_path, class: 'button is-primary' %>
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-light' %>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path, :class => 'button is-primary'  %>
+          <% if @demo_present %>
+            <%= link_to "Sign up", new_user_registration_path, :class => 'button is-primary'  %>
+          <% end %>
           <%= link_to "Login", new_user_session_path, class: 'button is-light'  %>
         <% end %>
         </div>
