redo routes: simplify deep nesting

--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,8 +1,8 @@
 <p hidden id='edit-resevation-<%= reservation.id %>' class='pageName'>Edit Reservation <%= reservation.id %></p>
 
 <h1>Edit Reservation</h1>
-<%= form_for( reservation, local: true,  # PATH MUST BE SINGULAR!!!
-              url: tenant_space_reservation_path(tenant_id: tenant, space_id: space, id: reservation),
+<%= form_for( reservation, local: true,
+              url: space_reservation_path(space_id: space, id: reservation),    # PATH MUST BE SINGULAR!!!
               id: "edit-reservation-form", class: "reservation" ) do |form|  %>
 
   <%= render 'form', form: form, reservation: reservation, space: space, tenant: tenant %>
