landing page varialbes renamed to _view in views

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -9,6 +9,5 @@
 <p hidden id='landing_index' class='pageName'>Landing Index</p>
 
 <%= render 'tenants/display',
-            user: user, spaces: spaces,
-            tenant: tenant, calendar: calendar %>
-
+            user_view: user_view, spaces_view: spaces_view,
+            tenant_view: tenant_view, calendar_view: calendar_view %>
