--- a/app/views/tenants/_display.html.erb
+++ b/app/views/tenants/_display.html.erb
@@ -5,26 +5,26 @@
     <div class="hero-body">
       <div class="container">
         <div class="columns is-multiline">
-          <% unless tenant.tenant_logo_url.blank? %>
+          <% unless tenant_view.tenant_logo_url.blank? %>
           <div class="column is-2">
-            <img src="<%= tenant.tenant_logo_url %>" alt="<%= tenant.tenant_name %> logo">
+            <img src="<%= tenant_view.tenant_logo_url %>" alt="<%= tenant_view.tenant_name %> logo">
           </div>
           <% end %>
           <div class="column">
             <p class="title">
-              <%= tenant.tenant_name %>
+              <%= tenant_view.tenant_name %>
             </p>
             <p class="subtitle">
-              <% unless tenant.tenant_site_url.blank? %>
-                <a href="<%= tenant.tenant_site_url %>"><%= tenant.tenant_site_url %></a>
+              <% unless tenant_view.tenant_site_url.blank? %>
+                <a href="<%= tenant_view.tenant_site_url %>"><%= tenant_view.tenant_site_url %></a>
                 <br><br>
               <% end %>
-              <%= tenant.tenant_tagline %>
+              <%= tenant_view.tenant_tagline %>
             </p>
             <p class="subtitle is-6">
-              <%= tenant.tenant_description %>
+              <%= tenant_view.tenant_description %>
             </p>
-            <% if tenant.is_demo? %>
+            <% if tenant_view.is_demo? %>
               <%= link_to "Other Groups", tenants_path,
                           class: "button hero-button is-light" %>
             <% end %>
@@ -39,19 +39,19 @@
     <div class="hero-body">
       <div class="container">
         <div class="columns is-centered is-multiline">
-        <% spaces.each do |space| %>
+        <% spaces_view.each do |space_view| %>
           <div class="column is-full-mobile is-half-tablet is-one-third-widescreen is-centered has-text-centered">
           <%# <div class="column is-full-mobile is-half-desktop is-one-third-fullhd is-centered has-text-centered"> %>
             <p class="title is-5">
-              <%= space.space_name %>
+              <%= space_view.space_name %>
               <%# link_to space.space_name,
-                          tenant_space_path(id: space.id, tenant_id: tenant.id),
+                          tenant_space_path(id: space.id, tenant_id: tenant_view.id),
                           class: "card-footer-item" %>
             </p>
             <%= render 'spaces/calendar_mini',
-                          user: user, space: space, tenant: tenant, calendar: calendar,
-                          prev_month_path: root_path(date: calendar.prev_month_string),
-                          next_month_path: root_path(date: calendar.next_month_string) %>
+                          user: user_view, space: space_view, tenant: tenant_view, calendar: calendar_view,
+                          prev_month_path: root_path(date: calendar_view.prev_month_string),
+                          next_month_path: root_path(date: calendar_view.next_month_string) %>
           </div>
         <% end %>
         </div>
